[gd_scene load_steps=3 format=3 uid="uid://dxoshints4kwp"]

[ext_resource type="PackedScene" uid="uid://dq0bqoex4778g" path="res://Background.tscn" id="1_dvxmy"]
[ext_resource type="Script" path="res://Scripts/CreateAccountPage.gd" id="1_kq48r"]

[node name="CreateAccountPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kq48r")

[node name="Background" parent="." instance=ExtResource("1_dvxmy")]
position = Vector2(960, 540)

[node name="MainLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -407.0
offset_right = 600.0
offset_bottom = -225.001
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 60
theme_override_font_sizes/bold_font_size = 60
theme_override_font_sizes/italics_font_size = 60
theme_override_font_sizes/bold_italics_font_size = 60
theme_override_font_sizes/mono_font_size = 60
bbcode_enabled = true
text = "[color=red]This username doesn't exist, would you like to create an account?[/color]"
fit_content = true

[node name="UsernameEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -218.0
offset_right = 600.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
placeholder_text = "Username"

[node name="PasswordEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -88.0
offset_right = 600.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
placeholder_text = "Password"

[node name="SubmitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = 62.0
offset_right = 600.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "Submit"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = 192.0
offset_right = 600.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "Back"

[node name="UsernameExistsLabel" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = 360.0
offset_right = 600.0
offset_bottom = 415.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
bbcode_enabled = true
text = "[center][color=red][i]This username already exists.[/i][/color][/center]"
fit_content = true

[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
